--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   sqflite: ^2.0.0+3
   get_it: ^7.1.3
   path_provider: ^2.0.2
+  flutter_native_splash: ^2.2.9
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -76,6 +77,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/splash/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
