--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   get_it: ^7.1.3
   path_provider: ^2.0.2
   flutter_native_splash: ^2.2.9
+  firebase_auth:
 
 
   # The following adds the Cupertino Icons font to your application.
