--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,8 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.0.0
   rxdart: ^0.27.1
-  firebase_crashlytics: ^2.9.0
-  firebase_core: ^1.24.0
+  firebase_crashlytics: ^3.0.6
+  firebase_core: ^2.3.0
   cached_network_image: ^3.2.2
   dartz: ^0.10.1
   equatable: ^2.0.5
@@ -44,7 +44,8 @@ dependencies:
   get_it: ^7.1.3
   path_provider: ^2.0.2
   flutter_native_splash: ^2.2.9
-  firebase_auth:
+  firebase_auth: ^4.1.3
+  google_sign_in: ^5.4.2
 
 
   # The following adds the Cupertino Icons font to your application.
