--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,10 +39,11 @@ dependencies:
   dartz: ^0.10.1
   equatable: ^2.0.5
   http: ^0.13.3
-  shared_preferences: ^2.0.5
+  shared_preferences: ^2.0.15
   sqflite: ^2.0.0+3
   get_it: ^7.1.3
   path_provider: ^2.0.2
+  provider: ^6.0.4
   flutter_native_splash: ^2.2.9
   firebase_auth: ^4.1.3
   google_sign_in: ^5.4.2
