--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   flutter_native_splash: ^2.2.9
   firebase_auth: ^4.1.3
   google_sign_in: ^5.4.2
+  flutter_map: ^3.0.0
+  latlong2: ^0.8.1
 
 
   # The following adds the Cupertino Icons font to your application.
