--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   google_sign_in: ^5.4.2
   flutter_map: ^3.0.0
   latlong2: ^0.8.1
+  beautiful_soup_dart: ^0.3.0
+  html: ^0.15.1
+  flutter_inappwebview: ^5.7.2+1
 
 
   # The following adds the Cupertino Icons font to your application.
