--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   beautiful_soup_dart: ^0.3.0
   html: ^0.15.1
   flutter_inappwebview: ^5.7.2+1
+  firebase_storage: ^11.0.6
+  image_picker: ^0.6.5
+  cloud_firestore: ^4.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
